syntax = "proto3";
package pb;

//日志操作类型
enum LogType {
    LOG_TYPE0  =  0;//无
    LOG_TYPE1  =  1;//注册赠送
    LOG_TYPE2  =  2;//通关奖励
    LOG_TYPE3  =  3;//购买获得
    LOG_TYPE4  =  4;//购买奖励
    LOG_TYPE5  =  5;//登录奖励
}

//关卡类型
enum GateType {
    GATE_TYPE0  =  0;//无
    GATE_TYPE1  =  1;//单人
    GATE_TYPE2  =  2;//副本
}

//登出类型
enum OutType {
    OUT_TYPE0  =  0;//无
    OUT_TYPE1  =  1;//别处登录
    OUT_TYPE2  =  2;//停服
}

//道具类型
enum PropType {
    PROP_TYPE0  =  0;//无
    PROP_TYPE1  =  1;//钻石
    PROP_TYPE2  =  2;//金币
    PROP_TYPE3  =  3;//精力
    PROP_TYPE4  =  4;//提示卡
    PROP_TYPE5  =  5;//重置卡
    PROP_TYPE6  =  6;//炸弹
    PROP_TYPE7  =  7;//时间冻结(5秒)
    PROP_TYPE8  =  8;//时间回流(3秒)
    PROP_TYPE9  =  9;//初级精力瓶
    PROP_TYPE10 = 10;//中级精力瓶
    PROP_TYPE11 = 11;//高级精力瓶
    PROP_TYPE12 = 12;//锤子
    PROP_TYPE13 = 13;//时间回流(10秒)
    PROP_TYPE14 = 14;//翻牌卡
}

//支付方式
enum PayWay {
    PAY_WAY0  =  0;//RMB(默认)
    PAY_WAY1  =  1;//钻石
    PAY_WAY2  =  2;//金币
}

//商品状态
enum ShopStatus {
    SHOP_STATUS0  =  0;//普通(默认)
    SHOP_STATUS1  =  1;//热卖
    SHOP_STATUS2  =  2;//新品
    SHOP_STATUS3  =  3;//下架
    SHOP_STATUS4  =  4;//临时
}

//奖励类型
enum PrizeType {
    PrizeSelect = 0;//查询(默认)
    PrizeDraw   = 1;//领取
}

//邀请好友设定
enum InviteType {
    InviteToday = 0;//每日(默认)
    InviteCount = 1;//累计
}

//奖励状态
enum PrizeStatus {
    PrizeNone = 0;//未完成
    PrizeDone = 1;//可以领取
    PrizeGot = 2;//已经领取
}
